fixed swagger notation
