# routes/orderBP.py
@@ -1,5 +1,5 @@
 from flask import Blueprint
-from controllers.orderController import save, find_all, find_by_id, find_by_customer_id, find_by_email
+from controllers.orderController import save, find_all, find_by_id, find_by_customer_id
 
 order_blueprint = Blueprint('order_bp', __name__)
 
@@ -8,4 +8,3 @@ order_blueprint.route('/', methods=['POST'])(save) #triggers the save function o
 order_blueprint.route('/', methods=['GET'])(find_all)
 order_blueprint.route('/<int:order_id>', methods=['GET'])(find_by_id)
 order_blueprint.route('/customer/<int:customer_id>', methods=['GET'])(find_by_customer_id)
-order_blueprint.route('/customer-email', methods=['GET'])(find_by_email)
